# model/reqo/chatgpt.go
@@ -1,0 +1,6 @@
+package reqo
+
+// Chat POST "/chat" request object
+type PostQuestion struct {
+	Content string `json:"content"`
+}
