# model/reso/chatgpt.go
@@ -1,0 +1,6 @@
+package reso
+
+// PostQuestion POST "/chat" response object
+type PostQuestion struct {
+	Content int64 `json:"content"`
+}
